# NosoCpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  ConsoleOutput .h  ConsoleOutput.cpp  Constants.h  LICENSE.txt  NosoC++.vcxproj  NosoC++.vcxproj.filters  NosoCpp.cpp  NosoCpp.h  NosoCpp.pc.in  Objects.h  README.md  WalletObject.cpp  WalletObject.h  build_with_cmake_vcpkg.ps1  build_with_cmake_vcpkg.sh  cliff.toml  mCripto.cpp  mCripto.h  mSigner.cpp  mSigner.h  main.cpp  nCore.cpp  nCore.h  nCripto.cpp  nCripto.h  nSigner.cpp  nSigner.h  nUtils.cpp  nUtils.h  tasks.json  vcpkg.json
.github/workflows/: build.yml  main.yml
cmake/: FindBotan.cmake
include/: Constants.h  NosoAddress.h  NosoCore.h  NosoCpp.h  NosoUtils.h  VerifySing.h  WalletObject.h  nCore.h  nUtils.h
include/cryptopp/: cryptopp.h
src/: NosoAddress.cpp  NosoCore.cpp  NosoCpp.cpp  NosoUtils.cpp  VerifySing.cpp  WalletObject.cpp  nCripto.cpp  nUtils.cpp
tests/: CMakeLists.txt  TestGenAddress.cpp  TestImportAddressForKeys.cpp
